--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ img {
   background-color: var(--navigation);
   border: none;
   transition: background-color var(--timing-function);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero-button:hover,
