--- a/css/styles.css
+++ b/css/styles.css
@@ -768,6 +768,10 @@ img {
   color: var(--text-primary-color);
 }
 
+strong.modal-title{
+	display: block;
+}
+
 .modal-form{
   margin-left: auto;
   margin-right: auto;
